Fixed text input being too dark

--- a/css/Quiet.css
+++ b/css/Quiet.css
@@ -3295,3 +3295,5 @@ polyline[stroke*="#7289da"]{stroke:var(--main-color) !important;}
 .create-guild-container.deprecated .join-server .sample-link{color: var(--main-color);}
 
 .guilds-wrapper .guilds .guild.selected .guild-inner:not([style*="background-color:"]), .guilds-wrapper .guilds .guild:hover .guild-inner:not([style*="background-color:"]){background-color:#0a0a0a !important;}
+
+.form.deprecated .control-group input[type=email], .form.deprecated .control-group input[type=number], .form.deprecated .control-group input[type=password], .form.deprecated .control-group input[type=text], .form.deprecated .control-group textarea {color: #eaeaea;}
